Fixed FAQ Collapse

--- a/faq_collapse/style.css
+++ b/faq_collapse/style.css
@@ -32,11 +32,13 @@ body {
   position: relative;
   overflow: hidden;
   transition: 0.3s ease;
+  max-height: 5rem;
 }
 
 .faq.active {
   background-color: #fff;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
+  max-height: 10rem;
 }
 
 .faq.active::before,
@@ -63,12 +65,12 @@ body {
 }
 
 .faq-text {
-  display: none;
+  transform: translateY(100px);
   margin: 30px 0 0;
 }
 
 .faq.active .faq-text {
-  display: block;
+  transform: translateY(0);
 }
 
 .faq-toggle {
